--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "vue": "^3.4.21",
-    "vue-router": "^4.3.2"
+    "vue-interact": "^1.0.0",
+    "vue-router": "^4.3.2",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -23,6 +25,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "sass": "^1.77.4",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.8"
   }
