--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "ldapjs": "^3.0.7",
+    "passport": "^0.7.0",
+    "passport-ldapauth": "^3.0.1",
     "pdf-lib": "^1.17.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
