--- a/backend/package.json
+++ b/backend/package.json
@@ -24,10 +24,12 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "class-validator": "^0.14.1",
     "ldapjs": "^3.0.7",
     "passport": "^0.7.0",
     "passport-ldapauth": "^3.0.1",
     "pdf-lib": "^1.17.1",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
