--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,10 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "esModuleInterop": true,
+    "include": [
+      "src/**/*.ts" // Pfade zu Ihren TypeScript-Dateien hier angeben
+    ]
   }
 }
