--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "pdf-lib": "^1.17.1",
     "vue": "^3.4.21",
     "vue-interact": "^1.0.0",
