changed some names in database folder user => users user_filling_data => user_fillingdata
started with new WorkflowElement class

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,9 +17,9 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "esModuleInterop": true,
-    "include": [
-      "src/**/*.ts" // Pfade zu Ihren TypeScript-Dateien hier angeben
-    ]
-  }
+    "esModuleInterop": true
+  },
+  "include": [
+    "src/**/*.ts"
+  ]
 }
