--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,8 @@
     "passport": "^0.7.0",
     "passport-ldapauth": "^3.0.1",
     "pdf-lib": "^1.17.1",
+    "pdfjs": "^2.5.3",
+    "pdfjs-dist": "^4.4.168",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
