--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "axios": "^1.7.2",
     "pdf-lib": "^1.17.1",
-    "vue": "^3.4.21",
+    "vue": "^3.4.31",
     "vue-interact": "^1.0.0",
     "vue-router": "^4.3.2",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
     "@rushstack/eslint-patch": "^1.8.0",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
@@ -29,6 +30,9 @@
     "prettier": "^3.2.5",
     "sass": "^1.77.4",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.8"
+    "vite": "^5.2.8",
+    "vite-plugin-env-compatible": "^2.0.1",
+    "vite-plugin-ssr": "^0.4.142",
+    "vue-pdf": "^4.3.0"
   }
 }
