--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.4.168",
     "vue": "^3.4.31",
     "vue-interact": "^1.0.0",
     "vue-router": "^4.3.2",
