--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "vue": "^3.4.31",
     "vue-interact": "^1.0.0",
     "vue-router": "^4.3.2",
-    "vuedraggable": "^4.1.0"
+    "vuedraggable": "^4.1.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
