--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.4.168",
     "vue": "^3.4.31",
+    "vue-draggable": "^2.0.6",
+    "vue-draggable-next": "^2.2.1",
     "vue-interact": "^1.0.0",
     "vue-router": "^4.3.2",
     "vuedraggable": "^4.1.0",
