--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.4.168",
     "vue": "^3.4.31",
